<resources>
    <string name="app_name">MobileDeveloperInternApp</string>
    <string name="profile_image">Avatar Photo</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="second_screen">Second Screen</string>
    <string name="third_screen">Third Screen</string>
    <string name="back">Back</string>
    <string name="welcome">Welcome</string>
    <string name="no_user">Selected User Name</string>
    <string name="choose_user">Choose a User</string>
    <string name="empty_user">No User Yet</string>
    <string name="email">Email</string>
    <string name="is_palindrome">Is Palindrome</string>
    <string name="not_palindrome">Not Palindrome</string>
    <string name="fill_name">Fill name first</string>
    <string name="fill_palindrome">Fill palindrome first</string>
</resources>