<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1"
    tools:context=".ui.screen.FirstScreenActivity">

    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="58dp"
        android:src="@drawable/ic_photo"
        android:contentDescription="@string/profile_image" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_name"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/rounded_text_input"
        android:hint="@string/name"
        android:fontFamily="@font/poppins_medium"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:ems="10"
        android:inputType="text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_palindrome"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="45dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/rounded_text_input"
        android:hint="@string/palindrome"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:ems="10"
        android:textSize="16sp"
        android:inputType="text" />

    <Button
        android:id="@+id/button_check"
        android:layout_width="310dp"
        android:layout_height="41dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_button"
        android:text="@string/check"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_medium" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="310dp"
        android:layout_height="41dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="14sp" />

</LinearLayout>